# deep-learning-from-scratch

./: .gitignore  pyproject.toml
nn/: __init__.py  functions.py  loss_functions.py  network.py  train.py  visualization.py
src/: functions.py
