[tool.poetry]
name = "deep-learning-from-scratch"
version = "0.1.0"
description = ""
authors = ["koonn <konnie211@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.20.2"
matplotlib = "^3.4.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
