[tool.poetry]
name = "deep-learning-from-scratch"
version = "0.1.0"
description = ""
authors = ["koonn <konnie211@gmail.com>"]

[tool.poetry.dependencies]
python = "3.8"
numpy = "^1.20.2"
matplotlib = "^3.4.1"
seaborn = "^0.11.1"
jupyterlab = "^3.0.14"
notebook = "6.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
